--- a/app/src/main/res/layout/dialog_custom.xml
+++ b/app/src/main/res/layout/dialog_custom.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/btn_close_dialog"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_gravity="top|center_horizontal"
         android:background="@drawable/round_golden"
+        android:backgroundTint="@color/white"
         android:elevation="8dp"
-        android:src="@android:drawable/ic_menu_close_clear_cancel" /> <!-- Add elevation to make it appear floating -->
+        android:scaleType="centerInside"
+        android:src="@drawable/cross_icon" /> <!-- Add elevation to make it appear floating -->
 
     <!-- Main Dialog Content Container -->
     <LinearLayout
@@ -20,44 +23,166 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:background="@drawable/light_grey_background"
+        android:background="@drawable/white_dialog_background_25dp"
         android:orientation="vertical"
-        android:padding="16dp"> <!-- Add margin top to make space for the cross button -->
+        android:padding="20dp"> <!-- Add margin top to make space for the cross button -->
 
         <!-- Your Dialog Content -->
-        <TextView
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="This is the main dialog content."
+            android:gravity="center"
+            android:text="Title"
             android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            android:textFontWeight="@integer/semiBold"
+            android:textSize="24sp" />
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="10dp"
+            android:orientation="horizontal">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_toLeftOf="@+id/tv_search"
+                android:background="@drawable/search_background"
+                android:paddingStart="15dp"
+                android:paddingEnd="15dp">
+
+                <!-- Search Icon (Start/Leading) -->
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/iv_search"
+                    android:layout_width="17dp"
+                    android:layout_height="17dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/search_icon" />
+
+                <!-- EditText -->
+                <EditText
+                    android:id="@+id/et_search"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_toStartOf="@id/iv_clear"
+                    android:layout_toEndOf="@id/iv_search"
+                    android:background="@android:color/transparent"
+                    android:gravity="center_vertical"
+                    android:hint="@string/search_speciality"
+                    android:paddingStart="4dp"
+                    android:paddingEnd="4dp"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
+
+                <!-- Cross Icon (End/Trailing) -->
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/iv_clear"
+                    android:layout_width="17dp"
+                    android:layout_height="17dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/round_golden"
+                    android:backgroundTint="@color/off_white"
+                    android:elevation="8dp"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/cross_icon"
+                    android:visibility="gone"
+                    app:tint="@color/white" />
+            </RelativeLayout>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_search"
+                android:layout_width="66dp"
+                android:layout_height="35dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="10dp"
+                android:background="@drawable/search_background"
+                android:gravity="center"
+                android:text="@string/search"
+                android:textColor="@color/black"
+                android:textFontWeight="600"
+                android:textSize="12sp" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_titles"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                tools:listitem="@layout/title_items" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_sub_titles"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:visibility="gone"
+                tools:listitem="@layout/title_items" />
+
+
+        </RelativeLayout>
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/dashed_line" />
         <!-- Expandable Content (initially hidden) -->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:orientation="vertical">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/clarifications"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_toggle_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:gravity="center"
+                android:text="@string/show"
+                android:textColor="@color/golden"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+
         <LinearLayout
             android:id="@+id/expandable_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:orientation="vertical"
             android:visibility="gone">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="This is the expanded content that will be shown/hidden."
-                android:textColor="@android:color/darker_gray"
-                android:textSize="14sp" />
+            <include layout="@layout/classification_items" />
 
+            <include layout="@layout/classification_items" />
+
+            <include layout="@layout/classification_items" />
         </LinearLayout>
 
-        <!-- Show More/Hide Button -->
-        <Button
-            android:id="@+id/btn_toggle_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16dp"
-            android:text="Show More" />
 
     </LinearLayout>
 
