--- a/app/src/main/res/layout/fragment_page_one.xml
+++ b/app/src/main/res/layout/fragment_page_one.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -31,15 +32,22 @@
                 card_view:cardCornerRadius="5dp"
                 card_view:cardElevation="1dp">
 
-                <androidx.cardview.widget.CardView
+                <FrameLayout
                     android:layout_width="200dp"
                     android:layout_height="200dp"
-                    android:layout_gravity="center"
-                    card_view:cardBackgroundColor="@color/white"
-                    card_view:cardCornerRadius="100dp"
-                    card_view:cardElevation="1dp">
+                    android:layout_gravity="center">
+
+
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:id="@+id/profile_image"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:background="@drawable/white_circle"
+                        app:shapeAppearanceOverlay="@style/CircleImageStyle" />
 
                     <LinearLayout
+                        android:id="@+id/linear_profile_image"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -47,7 +55,6 @@
                         android:orientation="vertical">
                         <!-- Circular ImageView inside CardView -->
                         <androidx.appcompat.widget.AppCompatImageView
-                            android:id="@+id/profile_image"
                             android:layout_width="71dp"
                             android:layout_height="55dp"
                             android:layout_gravity="center"
@@ -65,7 +72,8 @@
 
                     </LinearLayout>
 
-                </androidx.cardview.widget.CardView>
+
+                </FrameLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -75,17 +83,21 @@
                     android:gravity="center"
                     android:orientation="vertical">
 
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        card_view:cardBackgroundColor="@color/white"
-                        card_view:cardCornerRadius="25dp"
-                        card_view:cardElevation="1dp">
+                    <FrameLayout
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center">
 
+
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:id="@+id/header_image"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/white_circle" />
 
                         <!-- Circular ImageView inside CardView -->
                         <androidx.appcompat.widget.AppCompatImageView
-                            android:id="@+id/header_image"
                             android:layout_width="25dp"
                             android:layout_height="20dp"
                             android:layout_gravity="center"
@@ -93,7 +105,12 @@
                             android:src="@drawable/camera_inside_color" />
 
 
-                    </androidx.cardview.widget.CardView>
+                    </FrameLayout>
+
+
+
+
+
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="wrap_content"
