--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,5 +20,26 @@
 
     <style name="Theme.Joyers" parent="Base.Theme.Joyers" />
 
+    <style name="latRegularFontStyle" parent="@android:style/TextAppearance.Small">
+        <item name="fontFamily">@font/lato_regular</item>
+        <item name="android:fontFamily">@font/lato_regular</item>
+    </style>
+
+    <style name="latoBoldFontStyle" parent="@android:style/TextAppearance.Small">
+        <item name="fontFamily">@font/lato_bold</item>
+        <item name="android:fontFamily">@font/lato_bold</item>
+    </style>
+
+    <style name="latoSemiBoldFontStyle" parent="@android:style/TextAppearance.Small">
+        <item name="fontFamily">@font/lato_semi_bold</item>
+        <item name="android:fontFamily">@font/lato_semi_bold</item>
+    </style>
+
+    <style name="pacificoBoldFontStyle" parent="@android:style/TextAppearance.Small">
+        <item name="fontFamily">@font/pacifico_regular</item>
+        <item name="android:fontFamily">@font/pacifico_regular</item>
+    </style>
+    boldfontstyle
+
 
 </resources>
