--- a/app/src/main/res/layout/item_feed.xml
+++ b/app/src/main/res/layout/item_feed.xml
@@ -290,7 +290,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_location" />
+                android:src="@drawable/ic_location_hashtag" />
 
             <TextView
                 android:id="@+id/txtHashtag"
