--- a/app/src/main/res/layout/fragment_media_layout.xml
+++ b/app/src/main/res/layout/fragment_media_layout.xml
@@ -1,45 +1,186 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FAFAFA"
-    android:orientation="vertical">
+    android:fillViewport="true"
+    android:background="#FAFAFA">
 
-
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-
-
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:gravity="center_vertical"
-            android:layout_height="56dp">
+            android:layout_height="wrap_content">
 
-            <ImageView
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:layout_marginHorizontal="15dp"
+                android:gravity="center_vertical">
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:src="@drawable/baseline_arrow_back_24" />
+
+                <TextView
+                    style="@style/latoSemiBoldFontStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:textColor="#333333"
+                    android:text="@string/media_library"
+                    android:textSize="24sp" />
+
+                <TextView
+                    style="@style/latoBoldFontStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:gravity="center"
+                    android:text="@string/apply"
+                    android:textColor="@color/golden"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            style="@style/latoBoldFontStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="15.5dp"
+            android:gravity="center"
+            android:text="@string/media_height"
+            android:textSize="16sp" />
+
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:fillViewport="true"
+            android:scrollbars="none">
+
+            <LinearLayout
+                android:id="@+id/tab_container"
                 android:layout_width="wrap_content"
-                android:src="@drawable/ic_backspace_black_24dp"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="8dp" />
+        </HorizontalScrollView>
 
-            <TextView
+        <TextView
+            style="@style/latoBoldFontStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="25dp"
+            android:gravity="center"
+            android:text="Layout :"
+            android:textSize="16sp" />
+
+        <!-- layout_preview_3x2.xml -->
+
+        <GridLayout
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:columnCount="3"
+            android:padding="4dp"
+            android:rowCount="2">
+
+            <!-- Cell 1 -->
+            <View
                 android:layout_width="0dp"
-                android:layout_weight="1"
-                style="@style/latoSemiBoldFontStyle"
-                android:text="@string/media_library"
-                android:textSize="24sp"
-                android:gravity="center"
-                android:layout_height="wrap_content"/>
+                android:layout_height="0dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:background="@drawable/grid_cell_border" />
 
+            <!-- Cell 2 -->
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:background="@drawable/grid_cell_border" />
+
+            <!-- Cell 3 -->
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:background="@drawable/grid_cell_border" />
+
+            <!-- Row 2 Cell 1 -->
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:background="@drawable/grid_cell_border" />
+
+            <!-- Row 2 Cell 2 -->
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:background="@drawable/grid_cell_border" />
+
+            <!-- Row 2 Cell 3 -->
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:background="@drawable/grid_cell_border" />
+        </GridLayout>
+
+        <!-- Add below your GridLayout -->
+        <LinearLayout
+            android:id="@+id/layout_previews"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="15dp"
+            android:layout_marginHorizontal="15dp"
+            android:gravity="center_vertical">
 
             <TextView
+                android:id="@+id/view1_tab"
                 android:layout_width="wrap_content"
-                style="@style/latoSemiBoldFontStyle"
-                android:text="Apply"
-                android:textSize="24sp"
-                android:gravity="center"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="View 1"
+                android:textColor="@color/golden"
+                android:textSize="16sp"
+                android:layout_marginEnd="20dp" />
 
+            <TextView
+                android:id="@+id/view2_tab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="View 2"
+                android:textColor="#666666"
+                android:textSize="16sp" />
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+        <!-- RecyclerView or Static Grid -->
+        <GridLayout
+            android:id="@+id/media_grid"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="3"
+            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="10dp"
+            android:rowCount="2"
+            android:useDefaultMargins="true" />
+
+    </LinearLayout>
+</ScrollView>
