--- a/app/src/main/res/layout/fragment_media_layout.xml
+++ b/app/src/main/res/layout/fragment_media_layout.xml
@@ -1,9 +1,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
-    android:background="#FAFAFA">
+    android:background="#FAFAFA"
+    android:fillViewport="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,8 +31,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:textColor="#333333"
                     android:text="@string/media_library"
+                    android:textColor="#333333"
                     android:textSize="24sp" />
 
                 <TextView
@@ -75,112 +74,56 @@
                 android:padding="8dp" />
         </HorizontalScrollView>
 
-        <TextView
-            style="@style/latoBoldFontStyle"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginTop="25dp"
-            android:gravity="center"
-            android:text="Layout :"
-            android:textSize="16sp" />
-
-        <!-- layout_preview_3x2.xml -->
-
-        <GridLayout
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:columnCount="3"
-            android:padding="4dp"
-            android:rowCount="2">
-
-            <!-- Cell 1 -->
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:background="@drawable/grid_cell_border" />
-
-            <!-- Cell 2 -->
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:background="@drawable/grid_cell_border" />
-
-            <!-- Cell 3 -->
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:background="@drawable/grid_cell_border" />
-
-            <!-- Row 2 Cell 1 -->
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:background="@drawable/grid_cell_border" />
-
-            <!-- Row 2 Cell 2 -->
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:background="@drawable/grid_cell_border" />
-
-            <!-- Row 2 Cell 3 -->
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:background="@drawable/grid_cell_border" />
-        </GridLayout>
-
-        <!-- Add below your GridLayout -->
-        <LinearLayout
-            android:id="@+id/layout_previews"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="15dp"
-            android:layout_marginHorizontal="15dp"
-            android:gravity="center_vertical">
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="25dp">
 
             <TextView
-                android:id="@+id/view1_tab"
+                style="@style/latoBoldFontStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="View 1"
-                android:textColor="@color/golden"
-                android:textSize="16sp"
-                android:layout_marginEnd="20dp" />
-
-            <TextView
-                android:id="@+id/view2_tab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="View 2"
-                android:textColor="#666666"
+                android:layout_marginEnd="15dp"
+                android:gravity="center"
+                android:text="@string/layout"
                 android:textSize="16sp" />
+
+            <include layout="@layout/layout_1" />
+
+            <include
+                layout="@layout/layout_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp" />
+
+            <include layout="@layout/layout_3" />
+
         </LinearLayout>
 
         <!-- RecyclerView or Static Grid -->
-        <GridLayout
-            android:id="@+id/media_grid"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:columnCount="3"
-            android:layout_marginTop="10dp"
-            android:layout_marginHorizontal="10dp"
-            android:rowCount="2"
-            android:useDefaultMargins="true" />
 
+        <LinearLayout
+            android:id="@+id/media_container"
+            android:layout_width="match_parent"
+            android:layout_marginTop="20dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <GridLayout
+                android:id="@+id/media_grid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:columnCount="3"
+                android:rowCount="2" />
+        </LinearLayout>
+
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/media_view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:visibility="gone" />
     </LinearLayout>
 </ScrollView>
