--- a/app/src/main/res/layout/media_grid_item.xml
+++ b/app/src/main/res/layout/media_grid_item.xml
@@ -1,7 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:layout_margin="4dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_gravity="fill"
     android:layout_rowWeight="1"
     android:layout_columnWeight="1">
@@ -9,26 +8,40 @@
     <ImageView
         android:id="@+id/mediaImage"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/sample_image_1" />
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:layout_margin="1dp"/>
+
+    <TextView
+        android:id="@+id/imageCounter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="7dp"
+        android:paddingVertical="6dp"
+        android:textColor="#FFFFFF"
+        android:background="@drawable/dark_gray_circle"
+        android:textSize="12sp"
+        android:layout_gravity="top|start"
+        android:text="1/6" />
+
 
     <ImageView
         android:id="@+id/closeIcon"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_gravity="top|end"
-        android:layout_margin="6dp"
         android:src="@drawable/ic_close"
         android:visibility="visible" />
 
     <ImageView
         android:id="@+id/playIcon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:background="@drawable/white_circle"
         android:src="@drawable/ic_play_circle"
-        android:visibility="gone" />
+        android:padding="10dp" />
+
 
     <TextView
         android:id="@+id/moreOverlay"
